force-app/main/default/objects/CPF_Category__c/CPF_Category__c.object-meta.xml
<CustomObject>
    <description>&quot;Notes:
OW: Ordinary Wages (capped at OW Ceiling of $6,000)
AW: Additional Wages
TW: Total Wages = OW + AW
Steps to compute CPF contribution:
1) Compute the total CPF contribution (rounded to the nearest dollar). An amount of 50 cents should be regarded as an additional
dollar.
2) Compute the employee’s share of CPF contribution (cents should be dropped).
3) Employer’s share = Total contribution - Employee’s share&quot;</description>
    <label>CPF Category</label>
    <nameField>
        <displayFormat>CPFC-{00000}</displayFormat>
        <label>CPF Category No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPF Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>