force-app/main/default/objects/CPF_Category__c/fields/Capped_OW_Ceiling_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capped_OW_Ceiling_Amount__c</fullName>
    <label>Capped OW Ceiling Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>