force-app/main/default/objects/CPF_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Year</fullName>
                <default>true</default>
                <label>First Year</label>
            </value>
            <value>
                <fullName>Second Year</fullName>
            </value>
            <value>
                <fullName>Third Year &amp; Singaporean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>