force-app/main/default/objects/CPF_Category__c/fields/Employee_Contribution_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contribution_Fixed_Amount__c</fullName>
    <label>Employee Contribution Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>