force-app/main/default/objects/CPF_Category__c/fields/Employee_Contribution_Percent_of_OW__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contribution_Percent_of_OW__c</fullName>
    <label>Employee Contribution Percent of OW</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>