force-app/main/default/objects/CPF_Category__c/fields/Max_Employee_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Employee_Age__c</fullName>
    <label>Max Employee Age</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>