force-app/main/default/objects/CPF_Category__c/fields/Max_Total_Wages__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Wages__c</fullName>
    <label>Max Total Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>