force-app/main/default/objects/CPF_Category__c/fields/Min_Total_Wage__c.field-meta.xml
<CustomField>
    <fullName>Min_Total_Wage__c</fullName>
    <label>Min Total Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>