force-app/main/default/objects/CPF_Category__c/fields/TC_Multiple_of_TW_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>TC_Multiple_of_TW_Fixed_Amount__c</fullName>
    <description>Total Contribution Multiple of TW - Fixed Amount</description>
    <label>TC Multiple of TW - Fixed Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>