force-app/main/default/objects/CPF_Category__c/fields/Total_Contribution_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_Fixed_Amount__c</fullName>
    <label>Total Contribution Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>