force-app/main/default/objects/CPF_Category__c/fields/Total_Contribution_Percent_of_AW__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution_Percent_of_AW__c</fullName>
    <label>Total Contribution Percent of AW</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>